<resources>
    <string name="app_name">WaterSystem</string>

    <string name="quick_dialog_title">确定要退出吗</string>
    <string name="quick_dialog_sure">确定</string>
    <string name="quick_dialog_cancel">取消</string>

    <!--    登陆界面-->
    <string name="login">登陆</string>
    <string name="login_by_password_number_hint">请输入账号/手机号</string>
    <string name="login_by_password_password">请输入密码</string>
    <string name="login_by_code_number_hint">请输入手机号</string>
    <string name="login_by_code_code">请输入验证码</string>
    <string name="login_by_code_pull">获取验证码</string>
    <string name="login_btn">立即注册</string>
    <string name="login_register_btn">立即登陆</string>

    <!--    注册界面-->
    <string name="register">注册</string>
    <string name="register_by_password_number_hint">请输入账号</string>
    <string name="register_by_password_password">请输入密码</string>
    <string name="register_by_password_password_again">请再次输入密码</string>
    <string name="register_by_code_number_hint">请输入手机号</string>
    <string name="register_by_code_code">请输入验证码</string>
    <string name="register_by_code_pull">获取验证码</string>
    <string name="register_btn">立即注册</string>
    <string name="register_toast_number">请输入账号</string>
    <string name="register_toast_password">两次输入的密码不一致</string>
    <string name="register_toast_password_null">请输入密码</string>
    <string name="register_toast_phone">手机号输入有误</string>
    <string name="register_toast_phone_null">请输入手机号</string>
    <string name="register_toast_code">验证码输入有误</string>
    <string name="register_toast_code_null">请输入验证码</string>


    <!--    主界面-->
    <string name="home">主页</string>
    <string name="home_test">设备测试</string>
    <string name="home_setting">报警设置</string>
    <string name="home_analysis">场景选择</string>
    <string name="home_phone">拨号设置</string>
    <string name="home_about">联系我们</string>
    <string name="home_warn">报警记录</string>

    <!--    设备测试界面-->
    <string name="home_test_sensor_title">传感器测试</string>
    <string name="home_test_sensor_tds">测试TDS传感器</string>
    <string name="home_test_sensor_ph">测试PH传感器</string>
    <string name="home_test_sensor_temp">测试TEM传感器</string>
    <string name="home_test_sensor_tu">测试TU传感器</string>
    <string name="home_test_basic_title">基本测试</string>
    <string name="home_test_basic_electric">获取当前电量</string>
    <string name="home_test_basic_solar">测试太阳能充电</string>
    <string name="home_test_basic_movement">测试运动功能</string>
    <string name="home_test_basic_float">测试漂浮功能</string>

    <!--    报警设置界面-->
    <string name="home_test_setting_title">报警阈值设置</string>
    <string name="home_test_setting_tds_title">TDS</string>
    <string name="home_test_setting_ph_title">PH</string>
    <string name="home_test_setting_tem_title">TEM</string>
    <string name="home_test_setting_tu_title">TU</string>

    <!--    场景选择界面-->
    <string name="home_test_analysis_title">场景选择</string>
    <string name="home_test_analysis_tds">TDS</string>
    <string name="home_test_analysis_ph">PH</string>
    <string name="home_test_analysis_tem">TEM</string>
    <string name="home_test_analysis_tu">TU</string>

    <!--    拨号界面-->
    <string name="home_phone_dialog_title">请输入紧急拨打号码</string>
    <string name="home_phone_dialog_sure">确定</string>
    <string name="home_phone_dialog_cancel">取消</string>

    <!--    关于界面-->
    <string name="home_about_dialog">关于我们</string>


    <!--    控制界面-->
    <string name="control">控制</string>

    <!--    数据界面-->
    <string name="data">数据</string>

    <!--    地图界面-->
    <string name="map">地图</string>
    <string name="map_route">路线规划</string>
    <string name="map_route_detail">路线详情</string>

    <!--    个人界面-->
    <string name="personal">个人</string>
    <string name="personal_logout">退出登陆</string>
    <string name="personal_logout_dialog_title">您确定要退出登陆吗</string>
    <string name="personal_name">名称</string>
    <string name="personal_id">账号</string>
    <string name="personal_password">密码</string>
    <string name="personal_phone">手机号</string>
    <string name="personal_version">版本</string>


</resources>