<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_business"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.watersystem.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/home" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.watersystem.map.MapFragment"
        tools:layout="@layout/fragment_map"
        android:label="@string/map" />

    <fragment
        android:id="@+id/dataFragment"
        android:name="com.example.watersystem.data.DataFragment"
        tools:layout="@layout/fragment_data"
        android:label="@string/data" />

    <fragment
        android:id="@+id/controlFragment"
        android:name="com.example.watersystem.control.ControlFragment"
        tools:layout="@layout/fragment_control"
        android:label="@string/control" />

    <fragment
        android:id="@+id/personalFragment"
        android:name="com.example.watersystem.personal.PersonalFragment"
        tools:layout="@layout/fragment_personal"
        android:label="@string/personal" />

</navigation>