<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_stroke_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_sensor_title"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/home_test_sensor_tds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_sensor_tds"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/home_test_sensor_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_sensor_ph"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/home_test_sensor_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_sensor_temp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/home_test_sensor_tu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_sensor_tu"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/home_stroke_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_basic_title"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/home_test_basic_electric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_basic_electric"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/home_test_basic_solar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_basic_solar"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/home_test_basic_movement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_basic_movement"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/home_test_basic_float"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_test_basic_float"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</LinearLayout>