<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_phone_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_phone_dialog_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/home_phone_dialog_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:background="@drawable/home_stroke_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_phone_dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_phone_dialog_cancel"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/dialog_home_phone_negative_color" />

        <TextView
            android:id="@+id/home_phone_dialog_button_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_phone_dialog_sure"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/dialog_home_phone_positive_color" />

    </LinearLayout>

</LinearLayout>
