<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_stroke_background"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/home_test_setting_title"
            tools:ignore="RtlSymmetry" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/home_test_setting_tds_title"
                android:layout_width="30dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/home_test_setting_tds_title"
                android:textStyle="bold" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_height="25dp"
                android:textSize="12sp"
                android:background="@drawable/home_setting_edit_background"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/home_test_setting_ph_title"
                android:layout_width="30dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/home_test_setting_ph_title"
                android:textStyle="bold" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_height="25dp"
                android:textSize="12sp"
                android:background="@drawable/home_setting_edit_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/home_test_setting_tem_title"
                android:layout_width="30dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/home_test_setting_tem_title"
                android:textStyle="bold" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_height="25dp"
                android:textSize="12sp"
                android:background="@drawable/home_setting_edit_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/home_test_setting_tu_title"
                android:layout_width="30dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/home_test_setting_tu_title"
                android:textStyle="bold" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_height="25dp"
                android:textSize="12sp"
                android:background="@drawable/home_setting_edit_background"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>